--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -679,6 +679,7 @@
   "payload": "Payload",
   "payload_hash": "Payload Hash",
   "payload_length": "Payload Length",
+  "payment": "Payment",
   "payment_with_message": "Payment With Message",
   "peer": "Peer",
   "peers": "Peers",
