--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -670,6 +670,7 @@
   "payload": "Capacitate utilă",
   "payload_hash": "Capacitate utilă Hash",
   "payload_length": "Capacitatea lungimii",
+  "payment": "Plată",
   "payment_with_message": "Plată cu mesaj",
   "peer": "Peer",
   "peers": "Peers",
