--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -670,6 +670,7 @@
   "payload": "Комерческая нагрузка",
   "payload_hash": "Хэш комерческой нагрузки",
   "payload_length": "Длина коммерческой нагрузки",
+  "payment": "Оплата",
   "payment_with_message": "Платеж с сообщением",
   "peer": "Узел",
   "peers": "Пиры",
