--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -670,6 +670,7 @@
   "payload": "Комерцiйне навантаження",
   "payload_hash": "Хэш комерческой навантаження",
   "payload_length": "Довжина комерційного навантаження",
+  "payment": "",
   "payment_with_message": "Розрахунок з повідомлення",
   "peer": "Вузол",
   "peers": "Вузли",
