--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -670,6 +670,7 @@
   "payload": "Carga útil",
   "payload_hash": "Hash de carga",
   "payload_length": "Comprimento da Carga",
+  "payment": "Forma de pagamento",
   "payment_with_message": "Pagamento com mensagem",
   "peer": "Par",
   "peers": "Pares",
