--- a/web/angular-wallet/src/locales/pt-pt.json
+++ b/web/angular-wallet/src/locales/pt-pt.json
@@ -670,6 +670,7 @@
   "payload": "Carga",
   "payload_hash": "Hash de Carga",
   "payload_length": "Longitude da Carga",
+  "payment": "Forma de pagamento",
   "payment_with_message": "Pagamento Com Mensagem",
   "peer": "Par",
   "peers": "Pares",
