--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -670,6 +670,7 @@
   "payload": "Zaťaženie",
   "payload_hash": "Hash zaťaženie",
   "payload_length": "Dĺžka zaťaženia",
+  "payment": "",
   "payment_with_message": "Platba so správou",
   "peer": "Peer",
   "peers": "Peeri",
