--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -511,6 +511,7 @@
   "last_feeder": "Letzter Feeder",
   "last_feeder_height": "Weite des letzten Feeders",
   "last_updated": "Zuletzt Aktualisiert",
+  "leasing": "Leasing",
   "list_product_for_sale": "Artikel anbieten",
   "loading": "Wird geladen...",
   "loading_please_wait": "Wird geladen, bitte warten Sie.",
@@ -669,6 +670,7 @@
   "payload": "Nutzdaten",
   "payload_hash": "Nutzdatenhash",
   "payload_length": "Nutzdatenlänge",
+  "payment": "Zahlung",
   "payment_with_message": "Zahlung mit Nachricht",
   "peer": "Peer",
   "peers": "Peers",
@@ -749,6 +751,7 @@
   "repeat": "Wiederholen",
   "request_burst": "Request BURST",
   "returning_user_q": "Konto bereits vorhanden?",
+  "reward_recipient": "Belohnungsempfänger",
   "same_out": "Same Amount",
   "search_aliases": "Suche Aliasse...",
   "search_assets": "Suche Assets...",
@@ -789,6 +792,9 @@
   "show_console_log_button": "Schaltfläche für Konsole anzeigen",
   "signature_hash": "Signaturhash",
   "signed_transaction_bytes": "Signierte Transaktionsbytes",
+  "smart_contract": "Smart Contract",
+  "smart_contract_creation": "Smart Contract Erstellung",
+  "smart_contract_payment": "Bezahlung von Smart Contract",
   "smart_contracts": "Smart Contracts",
   "standard_fee": "Standard",
   "start_date": "Startdatum",
