--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -436,7 +436,7 @@
   "error_whole_quantity": "La cantidad debe ser un número entero.",
   "error_word_list": "No se pudo cargar la lista de palabras...",
   "error_wrong_buyer_for_alias": "Comprador de alias equivocado.",
-  "escrow": "Escrow",
+  "escrow": "Fideicomiso",
   "experimental_release": "Versión Experimental",
   "export_contact": "Exportar contactos",
   "failed": "Fallo",
@@ -511,6 +511,7 @@
   "last_feeder": "Último Alimentador",
   "last_feeder_height": "Altura del Último Alimentador",
   "last_updated": "Actualizado por Última Vez",
+  "leasing": "Arrendamiento",
   "list_product_for_sale": "Registrar Producto para la Venta",
   "loading": "Cargando...",
   "loading_please_wait": "Cargando, por favor espere",
@@ -669,6 +670,7 @@
   "payload": "Carga",
   "payload_hash": "Hash de la Carga",
   "payload_length": "Longitud de la Carga",
+  "payment": "Pago",
   "payment_with_message": "Pago Con Mensaje",
   "peer": "Par",
   "peers": "Pares",
@@ -749,6 +751,7 @@
   "repeat": "Repetir",
   "request_burst": "Request BURST",
   "returning_user_q": "¿Usuario existente?",
+  "reward_recipient": "Recipiente Recompensa",
   "same_out": "Same Amount",
   "search_aliases": "Búsqueda de Alias...",
   "search_assets": "Búsqueda de Activos...",
@@ -789,6 +792,9 @@
   "show_console_log_button": "Mostrar Botón de Registro de Consola",
   "signature_hash": "Hash de la Firma",
   "signed_transaction_bytes": "Bytes de la Transacción Firmada",
+  "smart_contract": "Contrato inteligente",
+  "smart_contract_creation": "Creación de contrato inteligente",
+  "smart_contract_payment": "Pago de contrato inteligente",
   "smart_contracts": "Smart Contracts",
   "standard_fee": "Estándar",
   "start_date": "Fecha de Inicio",
