--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -436,7 +436,7 @@
   "error_whole_quantity": "A cantidade ten que ser un número enteiro.",
   "error_word_list": "Non se puido cargala lista de palabras...",
   "error_wrong_buyer_for_alias": "Wrong buyer for alias.",
-  "escrow": "Escrow",
+  "escrow": "Seguro",
   "experimental_release": "Versión experimental",
   "export_contact": "Export Contacts",
   "failed": "Errado",
@@ -511,6 +511,7 @@
   "last_feeder": "Derradeiro Feeder",
   "last_feeder_height": "Altura do derradeiro alimentador",
   "last_updated": "Última actualización",
+  "leasing": "Arrendamento",
   "list_product_for_sale": "Rexistrar producto para a venda",
   "loading": "Carregando...",
   "loading_please_wait": "Carregando, por favor agarde",
@@ -669,6 +670,7 @@
   "payload": "Carga",
   "payload_hash": "Hash da carga",
   "payload_length": "Lonxitude da carga",
+  "payment": "Pagamento",
   "payment_with_message": "Pago coa mensaxe",
   "peer": "Par",
   "peers": "Pares",
@@ -749,6 +751,7 @@
   "repeat": "Repetir",
   "request_burst": "Request BURST",
   "returning_user_q": "¿Usuario existente?",
+  "reward_recipient": "Destinatario de recompensa",
   "same_out": "Same Amount",
   "search_aliases": "Búsqueda de Alias...",
   "search_assets": "Búsqueda de activos...",
@@ -789,6 +792,9 @@
   "show_console_log_button": "Amosar botón de rexistro de consola",
   "signature_hash": "Hash da firma",
   "signed_transaction_bytes": "Bytes da transacción firmada",
+  "smart_contract": "Contrato intelixente",
+  "smart_contract_creation": "Creación de contratos intelixentes",
+  "smart_contract_payment": "Pago de contrato intelixente",
   "smart_contracts": "Smart Contracts",
   "standard_fee": "Standard",
   "start_date": "Data de inicio",
