--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -520,6 +520,7 @@
   "lease_your_balance": "Leasing balansu",
   "leased_out": "Wyleasingowane",
   "leased_soon": "Wkrótce wyleasingowane",
+  "leasing": "Leasing",
   "list_product_for_sale": "Lista produktów na sprzedaż",
   "loading": "Trwa ładowanie...",
   "loading_please_wait": "Trwa ładowanie, proszę czekać",
@@ -678,6 +679,7 @@
   "payload": "Ładunek",
   "payload_hash": "Hash ładunku",
   "payload_length": "Długość ładunku",
+  "payment": "Zapłata",
   "payment_with_message": "Płatność z wiadomością",
   "peer": "Peer",
   "peers": "Peers",
@@ -758,6 +760,7 @@
   "repeat": "Powtórz",
   "request_burst": "Request BURST",
   "returning_user_q": "Powracający użytkownik?",
+  "reward_recipient": "Odbiorca nagrody",
   "same_out": "Ta sama ilość",
   "search_aliases": "Szukaj Aliasu...",
   "search_assets": "Szukaj Aktywa...",
@@ -798,6 +801,9 @@
   "show_console_log_button": "Pokaż przycisk do wyświetlenia konsoli",
   "signature_hash": "Hash podpisu",
   "signed_transaction_bytes": "Bajty podpisanej transakci",
+  "smart_contract": "Inteligentna umowa",
+  "smart_contract_creation": "Inteligentne tworzenie kontraktu",
+  "smart_contract_payment": "Płatność inteligentnej umowy",
   "smart_contracts": "Smart Contracts",
   "standard_fee": "Standard",
   "start_date": "Data rozpoczęcia",
