--- a/web/angular-wallet/src/locales/pt-pt.json
+++ b/web/angular-wallet/src/locales/pt-pt.json
@@ -436,7 +436,7 @@
   "error_whole_quantity": "A quantidade deve ser um número inteiro.",
   "error_word_list": "Não se conseguiu carregar a lista de palavras...",
   "error_wrong_buyer_for_alias": "Comprador de alias errado.",
-  "escrow": "Escrow",
+  "escrow": "Garantia",
   "experimental_release": "Versão Experimental",
   "export_contact": "Exportar Contactos",
   "failed": "Errou",
@@ -511,6 +511,7 @@
   "last_feeder": "Último Alimentador",
   "last_feeder_height": "Altura do Último Alimentador",
   "last_updated": "Atualizado pela Última vez",
+  "leasing": "Locação",
   "list_product_for_sale": "Registrar Produtos à Venda",
   "loading": "Carregando...",
   "loading_please_wait": "Carregando, por favor aguarde",
@@ -669,6 +670,7 @@
   "payload": "Carga",
   "payload_hash": "Hash de Carga",
   "payload_length": "Longitude da Carga",
+  "payment": "Forma de pagamento",
   "payment_with_message": "Pagamento Com Mensagem",
   "peer": "Par",
   "peers": "Pares",
@@ -749,6 +751,7 @@
   "repeat": "Repetir",
   "request_burst": "Request BURST",
   "returning_user_q": "Usuário Existente?",
+  "reward_recipient": "Destinatário da recompensa",
   "same_out": "Same Amount",
   "search_aliases": "Pesquisa de Aliases...",
   "search_assets": "Pesquisa de Ativos...",
@@ -789,6 +792,9 @@
   "show_console_log_button": "Mostrar Botom de Registro de Consola",
   "signature_hash": "Hash da Assinatura",
   "signed_transaction_bytes": "Bytes da Transação Assinada",
+  "smart_contract": "Contrato Inteligente",
+  "smart_contract_creation": "Criação de Contrato Inteligente",
+  "smart_contract_payment": "Pagamento de contrato inteligente",
   "smart_contracts": "Smart Contracts",
   "standard_fee": "Padrão",
   "start_date": "Data de início",
