--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -511,6 +511,7 @@
   "last_feeder": "Posledný feeder",
   "last_feeder_height": "Posledná výška feeder-u",
   "last_updated": "Posledná aktualizácia",
+  "leasing": "leasing",
   "list_product_for_sale": "Zaradiť produkt na predaj",
   "loading": "Načítava sa...",
   "loading_please_wait": "Načítava, čakajte prosím",
@@ -669,6 +670,7 @@
   "payload": "Zaťaženie",
   "payload_hash": "Hash zaťaženie",
   "payload_length": "Dĺžka zaťaženia",
+  "payment": "",
   "payment_with_message": "Platba so správou",
   "peer": "Peer",
   "peers": "Peeri",
@@ -749,6 +751,7 @@
   "repeat": "Opakovať",
   "request_burst": "Request BURST",
   "returning_user_q": "Opätovný používateľ?",
+  "reward_recipient": "Príjemca odmeny",
   "same_out": "Same Amount",
   "search_aliases": "Hľadať aliasy...",
   "search_assets": "Hľadať majetok...",
@@ -789,6 +792,9 @@
   "show_console_log_button": "Ukázať tlačidlo Log konzoly",
   "signature_hash": "Hash podpisu",
   "signed_transaction_bytes": "Podpísané bajty transakcií",
+  "smart_contract": "Inteligentná zmluva",
+  "smart_contract_creation": "Vytvorenie inteligentnej zmluvy",
+  "smart_contract_payment": "Platba inteligentnej zmluvy",
   "smart_contracts": "Smart Contracts",
   "standard_fee": "štandardné",
   "start_date": "Dátum začatia",
