--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -436,7 +436,7 @@
   "error_whole_quantity": "数量必须是整数。",
   "error_word_list": "无法加载单词列表...",
   "error_wrong_buyer_for_alias": "别名的错误购买者。",
-  "escrow": "Escrow",
+  "escrow": "第三方托管",
   "experimental_release": "测试版本发布",
   "export_contact": "Export Contacts",
   "failed": "失败",
@@ -511,6 +511,7 @@
   "last_feeder": "最新节点",
   "last_feeder_height": "最新节点高度",
   "last_updated": "最后更新",
+  "leasing": "租赁",
   "list_product_for_sale": "出售产品",
   "loading": "加载中...",
   "loading_please_wait": "正在加载，请稍后",
@@ -669,6 +670,7 @@
   "payload": "载荷",
   "payload_hash": "载荷哈希",
   "payload_length": "载荷长度",
+  "payment": "",
   "payment_with_message": "付款附加信息",
   "peer": "节点",
   "peers": "节点",
@@ -749,6 +751,7 @@
   "repeat": "重复",
   "request_burst": "Request BURST",
   "returning_user_q": "返回的用户？",
+  "reward_recipient": "奖励收件人",
   "same_out": "Same Amount",
   "search_aliases": "搜索别名...",
   "search_assets": "搜索资产...",
@@ -789,6 +792,9 @@
   "show_console_log_button": "显示控制台日志按钮",
   "signature_hash": "哈希签名",
   "signed_transaction_bytes": "已签名的交易字节",
+  "smart_contract": "智能合约",
+  "smart_contract_creation": "智能合约创建",
+  "smart_contract_payment": "支付智能合约",
   "smart_contracts": "Smart Contracts",
   "standard_fee": "标准",
   "start_date": "开始日期",
