--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -520,6 +520,7 @@
   "lease_your_balance": "Lease Your Balance",
   "leased_out": "Leased Out",
   "leased_soon": "Leased Soon",
+  "leasing": "Leasing",
   "list_product_for_sale": "List Product For Sale",
   "loading": "Loading...",
   "loading_please_wait": "Loading, please wait",
@@ -678,6 +679,7 @@
   "payload": "Payload",
   "payload_hash": "Payload Hash",
   "payload_length": "Payload Length",
+  "payment": "Payment",
   "payment_with_message": "Payment With Message",
   "peer": "Peer",
   "peers": "Peers",
@@ -758,6 +760,7 @@
   "repeat": "Repeat",
   "request_burst": "Request BURST",
   "returning_user_q": "Returning User?",
+  "reward_recipient": "Reward Recipient",
   "same_out": "Same Amount",
   "search_aliases": "Search Aliases...",
   "search_assets": "Search Assets...",
@@ -798,6 +801,9 @@
   "show_console_log_button": "Show Console Log Button",
   "signature_hash": "Signature Hash",
   "signed_transaction_bytes": "Signed Transaction Bytes",
+  "smart_contract": "Smart Contract",
+  "smart_contract_creation": "Smart Contract Creation",
+  "smart_contract_payment": "Payment of Smart Contract",
   "smart_contracts": "Smart Contracts",
   "standard_fee": "Standard",
   "start_date": "Start Date",
