--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -436,7 +436,7 @@
   "error_whole_quantity": "Kiekis turi būti pilnas skaičius.",
   "error_word_list": "Nepavyko įkelti žodžių sąrašo...",
   "error_wrong_buyer_for_alias": "Neteisingas pseudonimo pirkėjas.",
-  "escrow": "Escrow",
+  "escrow": "Sąlyginis depozitas",
   "experimental_release": "Eksperimentinė versija",
   "export_contact": "Export Contacts",
   "failed": "Nepavyko",
@@ -511,6 +511,7 @@
   "last_feeder": "Paskutinis Pranešėjas",
   "last_feeder_height": "Paskutinio bloko numeris",
   "last_updated": "Paskutinį kartą atnaujinta",
+  "leasing": "Lizingas",
   "list_product_for_sale": "Pateikite produktą pardavimui",
   "loading": "Įkraunama...",
   "loading_please_wait": "Įkeliama, prašome palaukti",
@@ -669,6 +670,7 @@
   "payload": "Payload",
   "payload_hash": "Payload Hash",
   "payload_length": "Payload Lenght",
+  "payment": "Mokėjimas",
   "payment_with_message": "Mokėjimas su žinute",
   "peer": "Peer'as",
   "peers": "Peer'ai",
@@ -749,6 +751,7 @@
   "repeat": "Kartoti",
   "request_burst": "Request BURST",
   "returning_user_q": "Esamas vartotojas?",
+  "reward_recipient": "Atlygis Gavėjas",
   "same_out": "Same Amount",
   "search_aliases": "Ieškoti pseudonimų...",
   "search_assets": "Ieškoti aktyvų...",
@@ -789,6 +792,9 @@
   "show_console_log_button": "Rodyti konsolės pranešimų mygtuką",
   "signature_hash": "Parašo \"hash",
   "signed_transaction_bytes": "Pasirašytos transakcijos baitai",
+  "smart_contract": "Protinga sutartis",
+  "smart_contract_creation": "„Smart“ sutarties sudarymas",
+  "smart_contract_payment": "Išmaniosios sutarties mokėjimas",
   "smart_contracts": "Smart Contracts",
   "standard_fee": "Standartinis",
   "start_date": "Pradžios Data",
