--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -436,7 +436,7 @@
   "error_whole_quantity": "Cantitatea trebuie să fie un număr întreg.",
   "error_word_list": "Nu s-a putut încărca lista de cuvinte...",
   "error_wrong_buyer_for_alias": "Cumpărător greşit pentru alias.",
-  "escrow": "Escrow",
+  "escrow": "Împuternicire legală",
   "experimental_release": "Versiune Experimentală",
   "export_contact": "Exportă Contacte",
   "failed": "Eşuat",
@@ -511,6 +511,7 @@
   "last_feeder": "Ultimul Feeder",
   "last_feeder_height": "Ultima Culme Feeder",
   "last_updated": "Actualizat ultima dată",
+  "leasing": "Leasing",
   "list_product_for_sale": "Listare Produse Vânzare",
   "loading": "Încărcare...",
   "loading_please_wait": "Încărcare, te rugăm să aştepţi",
@@ -669,6 +670,7 @@
   "payload": "Capacitate utilă",
   "payload_hash": "Capacitate utilă Hash",
   "payload_length": "Capacitatea lungimii",
+  "payment": "Plată",
   "payment_with_message": "Plată cu mesaj",
   "peer": "Peer",
   "peers": "Peers",
@@ -749,6 +751,7 @@
   "repeat": "Repetă",
   "request_burst": "Request BURST",
   "returning_user_q": "Deja înregistrat?",
+  "reward_recipient": "Recipient Recompensă",
   "same_out": "Same Amount",
   "search_aliases": "Căutare alias-uri...",
   "search_assets": "Căutare Active...",
@@ -789,6 +792,9 @@
   "show_console_log_button": "Arată butonul de logare al consolei",
   "signature_hash": "Hash-ul Semnăturii",
   "signed_transaction_bytes": "Bytes-ii tranzacției semnalate",
+  "smart_contract": "Contractul inteligent",
+  "smart_contract_creation": "Crearea inteligentă a contractelor",
+  "smart_contract_payment": "Plata contractului inteligent",
   "smart_contracts": "Smart Contracts",
   "standard_fee": "Standard",
   "start_date": "Data începerii",
